--- a/sakila-business-webapi/src/main/resources/static/bower.json
+++ b/sakila-business-webapi/src/main/resources/static/bower.json
@@ -7,9 +7,10 @@
     "angular-animate": "^1.4.0",
     "angular-cookies": "^1.4.0",
     "angular-resource": "^1.4.0",
-    "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
-    "angular-touch": "^1.4.0"
+    "angular-touch": "^1.4.0",
+    "angular-ui-router": "^0.3.2",
+    "angular-route": "^1.6.1"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
