--- a/sakila-business-webapi/src/main/resources/static/bower.json
+++ b/sakila-business-webapi/src/main/resources/static/bower.json
@@ -9,8 +9,7 @@
     "angular-resource": "^1.4.0",
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
-    "angular-ui-router": "^0.3.2",
-    "angular-route": "^1.6.1"
+    "angular-ui-router": "^0.3.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
